// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot - only default props 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorPrimary"
  >
    <span
      class="MuiChip-label"
    />
  </div>
</DocumentFragment>
`;

exports[`deletable chip in small, secondary sizesnapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorSecondary MuiChip-deletableColorSecondary MuiChip-sizeSmall MuiChip-deletable"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorSecondary MuiChip-deleteIconSmall"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`deletable chip snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorPrimary MuiChip-deletableColorPrimary MuiChip-deletable"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiChip-label"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorPrimary"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`error chip snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-colorPrimary makeStyles-colorPrimaryError-127"
  >
    <span
      class="MuiChip-label"
    />
  </div>
</DocumentFragment>
`;
